@@ -967,8 +967,16 @@ fuse_internal_newentry_core(vnode_t                 dvp,
         goto out;
     }
 
-    err = fuse_vget_i(mp, feo->nodeid, context, dvp, vpp, cnp,
-                      vtyp, 0 /* size */, VG_FORCENEW, VTOI(dvp));
+    err = fuse_vget_i(mp,
+                      feo->nodeid,
+                      context,
+                      dvp,
+                      vpp,
+                      cnp,
+                      vtyp,
+                      FUSE_ZERO_SIZE,
+                      VG_FORCENEW,
+                      VTOI(dvp));
     if (err) {
         fuse_internal_forget_send(mp, context, feo->nodeid, 1, fdip);
         return err;
